--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/maker-bundle": "^1.38"
+        "symfony/maker-bundle": "^1.38",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     },
     "config": {
         "allow-plugins": {
