--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/expression-language": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
@@ -33,6 +34,7 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.10",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
