--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=b40e1898e2f0755195be045c6d8ee7f2
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="sqlite:///database.sqlite"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
