--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=b40e1898e2f0755195be045c6d8ee7f2
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="sqlite:///database.sqlite"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/app.db"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
