--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "myclabs/php-enum": "^1.8",
         "nelmio/cors-bundle": "^2.2",
         "nesbot/carbon": "^2.57",
         "phpdocumentor/reflection-docblock": "^5.3",
